Fix question text cut off when image appears in question prompt
PT Story: https://www.pivotaltracker.com/story/show/181427575

[#181427575]

Add style rules to ensure images in question prompts will not be wider than their container. It's possible the `height: auto` rule will prevent authors from setting an image to a specific height, but I think it's unlikely authors will need to do that. It's probably more important to maintain the image's aspect ratio so it doesn't get distorted.

--- a/src/image-question/components/runtime.scss
+++ b/src/image-question/components/runtime.scss
@@ -5,6 +5,11 @@ legend.prompt { // clear bootstrap stuff
   font-size: unset;
   border: unset;
   padding-bottom: 5px;
+
+  img {
+    height: auto;
+    max-width: 100%;
+  }
 }
 
 .answerPrompt {
